--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -4687,6 +4687,12 @@
     "Failed to set OBS scene to %@" : {
 
     },
+    "Failed to start OBS stream" : {
+
+    },
+    "Failed to stop OBS stream" : {
+
+    },
     "Feel free to join Moblin Discord server or write an issue on Github if you need help or want to give feedback." : {
       "localizations" : {
         "de" : {
@@ -7414,7 +7420,16 @@
     "OBS scene set to %@" : {
 
     },
+    "OBS start/stop stream" : {
+
+    },
     "OBS status" : {
+
+    },
+    "OBS stream started" : {
+
+    },
+    "OBS stream stopped" : {
 
     },
     "OBS WebSocket is not configured. Configure it in Settings -> Streams -> %@ -> OBS." : {
