Show toast explaining that the stream URL has to be configured before going live.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -7803,6 +7803,9 @@
         }
       }
     },
+    "Please enter your stream URL in stream settings before going live." : {
+
+    },
     "Preset" : {
       "localizations" : {
         "de" : {
