Show OBS websocket connection error in UI.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -4868,7 +4868,7 @@
         }
       }
     },
-    "For example wss://232.32.45.332:4567." : {
+    "For example ws://232.32.45.332:4567." : {
 
     },
     "front" : {
