--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -1474,6 +1474,9 @@
         }
       }
     },
+    "Auto cameras use more energy as multiple cameras are powered on, even if only one is used at a time. This allows the phone to quickly change camera when zooming." : {
+
+    },
     "back" : {
       "localizations" : {
         "de" : {
@@ -10058,7 +10061,6 @@
       }
     },
     "The Picture in Picture layout is experimental and does not work." : {
-      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -10103,6 +10105,9 @@
           }
         }
       }
+    },
+    "The ultra wide camera does not perform well in low light conditions. Likewise, the auto cameras do not perform well when zoom is 0.5-1.0x since the ultra wide camera will be used." : {
+
     },
     "The zoom (in X) to set when switching to given camera, if enabled." : {
       "localizations" : {
@@ -11218,7 +11223,6 @@
       }
     },
     "Video stabilization sometimes gives audio-video sync issues." : {
-      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
